Animasyonlar kasma sebebiyle yorum satırına dönüştürüldü. Uygulama aab. çıktısı alınıp markete yayınlanmak üzere gönderildi.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Doğrusunu Bul</string>
+    <string name="app_name">Doğruyu Bul Kelime Oyunu</string>
 
 </resources>
